Subtle INCOMPATIBILITY and change of semantics (due to
Theory.join_theory from Isabelle2020). Special extend/merge behaviour at
the begin of a new theory can be achieved via Theory.at_begin.

* Antiquotations @{scala_function}, @{scala}, @{scala_thread} refer to
registered Isabelle/Scala functions (of type String => String):
invocation works via the PIDE protocol.


*** System ***

* Update/rebuild external provers on currently supported OS platforms,
notably E prover 2.5, SPASS 3.8ds, CSDP 6.1.1.

* Discontinued obsolete isabelle display tool, and DVI_VIEWER settings
variable.

* The command-line tool "isabelle logo" only outputs PDF; obsolete EPS
(for DVI documents) has been discontinued. Former option -n has been
turned into -o with explicit file name. Minor INCOMPATIBILITY.

* The shell function "isabelle_directory" (within etc/settings of
components) augments the list of special directories for persistent
symbolic path names. This improves portability of heap images and
session databases. It used to be hard-wired for Isabelle + AFP, but
other projects may now participate on equal terms.

* ML statistics via an external Poly/ML process: this allows monitoring
the runtime system while the ML program sleeps.

* Batch-builds via "isabelle build" use a PIDE session with special
protocol: this allows to invoke Isabelle/Scala operations from
Isabelle/ML. Big build jobs (e.g. AFP) require extra heap space for the
java process, e.g. like this in $ISABELLE_HOME_USER/etc/settings:

  ISABELLE_TOOL_JAVA_OPTIONS="$ISABELLE_TOOL_JAVA_OPTIONS -Xmx8g"

* The command-line tool "isabelle console" now supports interrupts
properly (on Linux and macOS).

* The command-line tool "isabelle sessions" explores the structure of
Isabelle sessions and prints result names in topological order (on
stdout).

* The Isabelle/Scala "Progress" interface changed slightly and
"No_Progress" has been discontinued. INCOMPATIBILITY, use "new Progress"
instead.
