@@ -81,7 +81,7 @@ main = return ()
 
 fun new_project dir {name, depends, modules} =
   let
-    val template_path = Path.append dir (Path.basic name |> Path.ext "hsfiles");
+    val template_path = dir + (Path.basic name |> Path.ext "hsfiles");
     val _ = File.write template_path (project_template {depends = depends, modules = modules});
     val {rc, err, ...} =
       Bash.process ("cd " ^ File.bash_path dir ^ "; isabelle ghc_stack new " ^ Bash.string name ^
